HelloUltraviolet/Fixtures/RejectedSource/Expressions/ConstructionExpressionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the ConstructionExpressionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-TYP-1903", "diag.16.ConstructionExpressions")
